syntax = "proto3";

package hello;

message HelloRequest {
  optional string name = 1;
  repeated string hobbies = 2;
}

message HelloResponse {
  string message = 1;
}

service HelloWorldService {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
  rpc SayHelloStream(HelloRequest) returns (stream HelloResponse) {}
}
