syntax = "proto3";

package echo;

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse) {}
  rpc EchoClientStream(stream EchoRequest) returns (EchoResponse) {}
  rpc EchoBidiStream(stream EchoRequest) returns (stream EchoResponse) {}
}
